feat: V1.1.0 Release - Complete Life World OS with Phase 1 observability
- Phase 1: Local Build with Dev - Observability complete
  - Prometheus + Grafana monitoring
  - Portainer container management
  - Node Exporter system metrics
  - Local/local and local/dev connection support

- Development environment improvements
  - Updated dev startup scripts with observability
  - Monorepo port configuration (5000/5001/5002)
  - Enhanced dev hub with admin features
  - Artifacts system implementation

- Backend enhancements
  - Custom instructions system
  - Decision engine and policy checker
  - Query metrics and monitoring
  - Action executor service
  - Artifacts routes and seeding

- Infrastructure
  - Version 1.1.0
  - Complete Phase 0 and Phase 1 implementation
  - Docker Compose observability stack
  - Development scripts and tooling

Ready for production deployment.

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -25,7 +25,9 @@
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
-    "test:watch": "vitest watch"
+    "test:watch": "vitest watch",
+    "ollama:debug": "tsx scripts/ollama-debug.ts",
+    "fix:hierarchy": "./scripts/fix-hierarchy.sh"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
