chore: add pre-release quality checks and security scanning
- Add comprehensive pre-release check script
- Add security and secret scanning
- Add console.log removal tool
- Add pre-release execution script
- Create pre-release checklist and plan
- Add clean architecture refactoring guide
- Remove .env files from git tracking
- Update .gitignore for .env files

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@ build/
 .env.development.local
 .env.test.local
 .env.production.local
+config/environments/*.env
+!config/environments/*.env.example
 
 # Dev secrets and API key setup (hidden from main view)
 .dev-secrets/
