feat: add SonarQube integration for code quality analysis
- Add SonarQube configuration (sonar-project.properties)
- Add SonarQube Docker Compose setup
- Add setup and analysis scripts
- Add NPM scripts for SonarQube operations
- Add comprehensive SonarQube documentation
- Switch to GitLab Flow (staging branch instead of develop)
- Update .gitignore for SonarQube files

--- a/.gitignore
+++ b/.gitignore
@@ -51,6 +51,11 @@ seeds/dumps/*.metadata.json
 # Vite
 .vite/
 
+# SonarQube
+.sonarqube.env
+.sonar/
+.scannerwork/
+
 # Dev Hub (old location - migrated to apps/dev-hub-app)
 dev-hub/
 DEV_HUB_REFERENCE.md
