--- a/package.json
+++ b/package.json
@@ -96,7 +96,12 @@
     "observability:logs": "docker-compose -f docker-compose.observability.local.yml logs -f",
     "portainer:up": "docker-compose -f docker-compose.portainer.yml up -d",
     "portainer:down": "docker-compose -f docker-compose.portainer.yml down",
-    "portainer:logs": "docker-compose -f docker-compose.portainer.yml logs -f"
+    "portainer:logs": "docker-compose -f docker-compose.portainer.yml logs -f",
+    "sonar:setup": "./scripts/setup-sonarqube.sh",
+    "sonar:analyze": "./scripts/run-sonarqube.sh",
+    "sonar:up": "docker-compose -f docker-compose.sonarqube.yml up -d",
+    "sonar:down": "docker-compose -f docker-compose.sonarqube.yml down",
+    "sonar:logs": "docker-compose -f docker-compose.sonarqube.yml logs -f"
   },
   "devDependencies": {
     "@playwright/test": "^1.57.0",
