--- a/docker-compose.sonarqube.yml
+++ b/docker-compose.sonarqube.yml
@@ -3,16 +3,20 @@
 
 services:
   sonarqube:
-    image: sonarqube:community
+    image: sonarqube:latest
     container_name: life-world-os-sonarqube
     hostname: sonarqube
     depends_on:
-      - sonarqube-db
+      sonarqube-db:
+        condition: service_healthy
     environment:
       SONAR_JDBC_URL: jdbc:postgresql://sonarqube-db:5432/sonar
       SONAR_JDBC_USERNAME: sonar
       SONAR_JDBC_PASSWORD: sonar
       SONAR_ES_BOOTSTRAP_CHECKS_DISABLE: true
+      # Optional: Set memory limits (adjust based on your system)
+      # SONAR_CE_JAVAOPTS: -Xmx512m -Xms128m
+      # SONAR_WEB_JAVAOPTS: -Xmx512m -Xms128m
     volumes:
       - sonarqube_data:/opt/sonarqube/data
       - sonarqube_extensions:/opt/sonarqube/extensions
@@ -36,16 +40,18 @@ services:
       POSTGRES_USER: sonar
       POSTGRES_PASSWORD: sonar
       POSTGRES_DB: sonar
+      POSTGRES_INITDB_ARGS: "-E UTF8"
     volumes:
       - sonarqube_db_data:/var/lib/postgresql/data
     networks:
       - sonarqube-network
     restart: unless-stopped
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U sonar"]
+      test: ["CMD-SHELL", "pg_isready -U sonar -d sonar"]
       interval: 10s
       timeout: 5s
       retries: 5
+      start_period: 10s
 
 networks:
   sonarqube-network:
