--- a/package.json
+++ b/package.json
@@ -100,10 +100,12 @@
     "sonar:setup": "./scripts/setup-sonarqube.sh",
     "sonar:analyze": "./scripts/run-sonarqube.sh",
     "sonar:analyze:docker": "./scripts/sonar-docker-analyze.sh",
+    "sonar:start": "./scripts/start-sonarqube.sh",
     "sonar:up": "docker-compose -f docker-compose.sonarqube.yml up -d",
     "sonar:down": "docker-compose -f docker-compose.sonarqube.yml down",
     "sonar:logs": "docker-compose -f docker-compose.sonarqube.yml logs -f",
-    "sonar:status": "docker-compose -f docker-compose.sonarqube.yml ps"
+    "sonar:status": "docker-compose -f docker-compose.sonarqube.yml ps",
+    "sonar:ready": "./scripts/check-sonarqube-ready.sh"
   },
   "devDependencies": {
     "@playwright/test": "^1.57.0",
