--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "restart:full": "npm run docker:restart && npm run restart:frontend",
     "dev:local": "./scripts/dev-local.sh",
     "dev:backend": "cd apps/backend && PORT=5001 npm run dev",
+    "dev:backend:start": "./scripts/start-backend.sh",
     "dev:frontend": "cd apps/frontend && npm run dev",
     "env:status": "./scripts/check-env-status.sh",
     "phase1:up": "docker-compose -f docker-compose.observability.local.yml up -d && docker-compose -f docker-compose.portainer.yml up -d",
