chore: prepare for release - commit pending changes
- Fix backend connection issues
- Update GuideBot API URL
- Add SonarQube integration
- Add backend startup scripts
- Fix syntax errors in customInstructions
- Add smoke test scripts
- Add release documentation

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -27,7 +27,8 @@
     "test:coverage": "vitest run --coverage",
     "test:watch": "vitest watch",
     "ollama:debug": "tsx scripts/ollama-debug.ts",
-    "fix:hierarchy": "./scripts/fix-hierarchy.sh"
+    "fix:hierarchy": "./scripts/fix-hierarchy.sh",
+    "test:chat": "tsx scripts/smoke-test-chat.ts"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
