feat: Google auth auto-signup, lastName, test users, Grafana fix, Loki logs
- Auth: Google Sign-In creates account from profile (given_name, family_name)
  when user not found; no more 'sign up first' requirement
- Backend: Add lastName (family_name from Google) to User, auth, profile,
  dashboard; document POST /api/auth/google in API_DOCUMENTATION.md
- Frontend: User types and Header show firstName + lastName; profile API
  supports lastName; remove obsolete 'create account first' error copy
- Test users: Add test@example.com, demo@example.com (password123) to dev
  seed; document in docs/TEST_USERS.md and README
- Grafana: Reset admin password on container start so admin/admin always
  works with existing volume; update GRAFANA_QUICK_START
- Observability: Add Loki + Promtail for CloudWatch-like logs; Promtail
  tails backend/frontend logs from host /tmp; provision Loki datasource
  in Grafana; docs/LOKI_LOGS.md, local script starts Loki/Promtail
- Local: dev:observability and npm run local start Loki/Promtail; local-lite
  script (DB + backend + frontend only)

--- a/apps/frontend/.env.local.example
+++ b/apps/frontend/.env.local.example
@@ -2,5 +2,9 @@
 # Copy this file to .env.local to use it
 # cp .env.local.example .env.local
 
-# Frontend connects to backend on port 5001
+# Backend API (local-lite uses port 5001)
 VITE_API_URL=http://localhost:5001
+
+# Google Sign-In: same Client ID as backend. In GCP add Authorized JavaScript origins:
+# http://localhost:5002, http://localhost:5173
+# VITE_GOOGLE_CLIENT_ID=your-client-id.apps.googleusercontent.com
