--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "dev:frontend": "cd apps/frontend && npm run dev",
     "dev:dev-hub": "cd apps/dev-hub-app && npm run dev",
     "dev:local": "./scripts/envs/local.sh",
+    "local": "./scripts/envs/local.sh",
+    "local-lite": "./scripts/envs/local-lite.sh",
+    "dev:local-lite": "./scripts/envs/local-lite.sh",
     "dev:hybrid": "npm run dev:db && npm run dev:observability && npm run dev",
-    "dev:prometheus": "docker-compose -f docker-compose.observability.local.yml up -d prometheus grafana",
-    "dev:observability": "docker-compose -f docker-compose.observability.local.yml up -d prometheus grafana",
+    "dev:prometheus": "docker-compose -f docker-compose.observability.local.yml up -d prometheus grafana loki promtail",
+    "dev:observability": "docker-compose -f docker-compose.observability.local.yml up -d prometheus grafana loki promtail",
     "dev:full": "docker-compose --profile full -f docker-compose.dev.yml up -d",
     "dev:full:down": "docker-compose --profile full -f docker-compose.dev.yml down",
     "dev:full:logs": "docker-compose --profile full -f docker-compose.dev.yml logs -f",
