fix: hierarchy tree expand/collapse and add Redis cache-aside
- HierarchyTreeView: use actual root id (reality-root), stable effect deps,
  ref for refresh so expand/collapse does not reload; 5min refresh interval
- Redis: optional cache for reality nodes (GET :id, GET :id/children);
  docker-compose.dev redis-dev service; lib/redis.ts, lib/cache.ts

--- a/apps/backend/.env.local.example
+++ b/apps/backend/.env.local.example
@@ -20,5 +20,8 @@ OLLAMA_EMBEDDING_MODEL=nomic-embed-text
 GROQ_API_KEY=
 OPENAI_API_KEY=
 
+# Redis (optional - cache for hierarchy/nodes; app works without it)
+# REDIS_URL=redis://localhost:6379
+
 # Logging
 LOG_LEVEL=debug
