--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -41,6 +41,7 @@
     "express": "^4.18.2",
     "google-auth-library": "^10.5.0",
     "groq-sdk": "^0.37.0",
+    "ioredis": "^5.9.2",
     "jsonwebtoken": "^9.0.2",
     "zod": "^3.22.4"
   },
