chore(deploy): add Render + Supabase deployment docs and prod env CORS
Made-with: Cursor

--- a/config/environments/prod.env.example
+++ b/config/environments/prod.env.example
@@ -101,8 +101,10 @@ PROD_CSP_ENABLED=true
 # =============================================================================
 # SECURITY CONFIGURATION
 # =============================================================================
-# CORS Configuration
+# CORS Configuration (backend reads CORS_ORIGINS for production allowlist)
+# Render: set CORS_ORIGINS in backend service to your frontend URL, e.g. https://life-world-os-frontend.onrender.com
 PROD_CORS_ORIGIN=https://yourdomain.com,https://www.yourdomain.com
+CORS_ORIGINS=https://yourdomain.com,https://www.yourdomain.com
 
 # Rate Limiting
 PROD_RATE_LIMIT_ENABLED=true
